Refactor: remove database connection test code and reset project for development

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ __pycache__/
 *.pyc
 instance/
 .pytest_cache/
+
+# Security (DO NOT COMMIT THESE)
+serviceAccountKey.json
+backend/serviceAccountKey.json
