--- a/firebase.json
+++ b/firebase.json
@@ -25,6 +25,7 @@
       ]
     },
     "firestore": {
+      "database": "edsis-2-database",
       "rules": "firestore.rules",
       "indexes": "firestore.indexes.json"
     }
