refactor: refine catalog UI, standardize buttons, update product detail layout, and fix layout sticking

--- a/firebase.json
+++ b/firebase.json
@@ -28,5 +28,8 @@
       "database": "edsis-2-database",
       "rules": "firestore.rules",
       "indexes": "firestore.indexes.json"
+    },
+    "storage": {
+      "rules": "storage.rules"
     }
   }
